--- a/src/main/java/com/issuetracker/pages/layout/HeaderPanel.html
+++ b/src/main/java/com/issuetracker/pages/layout/HeaderPanel.html
@@ -12,19 +12,17 @@ and open the template in the editor.
 
     <wicket:panel>
         <span wicket:id="name">My label</span>
-        <table width="100%" style="border: 1px solid black;">
-            <tbody>
-                <tr>
-                    <td>
-                        <img src="images/logo.jpg">
-                    </td>
-                    <td>
-                        <h1>Issue tracking system</h1>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
 
+        <ul id='nav'>
+            <li><a href="#">Projects</a>
+                <ul  wicket:id="projectTasks" >
+                    <li><a href="#" wicket:id="actionLink"><span wicket:id="name">[name]</span></a></li>
+                </ul>
+            </li>
+        </ul>        
     </wicket:panel>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js" type="text/javascript" charset="utf-8"></script>	
+    <script src="http://jquery-ui.googlecode.com/svn/tags/latest/ui/jquery.effects.core.js" type="text/javascript"></script>
+    <script type="text/javascript" src="scripts.js"></script>
 </body>
 </html>
