--- a/src/main/java/com/issuetracker/pages/component/component/ComponentListView.html
+++ b/src/main/java/com/issuetracker/pages/component/component/ComponentListView.html
@@ -11,17 +11,19 @@ and open the template in the editor.
     <body>
     <wicket:panel>
         <span wicket:id="components"/>
-        <table cellpadding="8">
-            <tr>
-                <td width="200">Name</td>
-                <td width="200">&nbsp;</td>
-            </tr>
-            <tr wicket:id="componentsList">
-                <td><span wicket:id="name"></span></td>
+      
+            <table cellpadding="8">
+                <tr>
+                    <td width="200">Name</td>
+                    <td width="200">&nbsp;</td>
+                </tr>
+                <tr wicket:id="componentsList">
+                    <td><span wicket:id="name"></span></td>
 
-                <td><a href="#" wicket:id="remove">[delete]</a></td>
-            </tr>
-        </table>
+                    <td><a href="#" wicket:id="remove"><span wicket:id="name"></span></a></td>
+                </tr>
+            </table>
+       
     </wicket:panel>
 </body>
 </html>
