--- a/src/main/java/com/issuetracker/pages/layout/HeaderPanel.html
+++ b/src/main/java/com/issuetracker/pages/layout/HeaderPanel.html
@@ -26,7 +26,14 @@ and open the template in the editor.
                     <li><a href="#" wicket:id="actionLink"><span wicket:id="name">[name]</span></a></li>
                 </ul>
             </li>
-        </ul>    
+        </ul>   
+        <ul id='nav'>
+            <li><a href="#">Workflow</a>
+                <ul  wicket:id="workflowTasks" >
+                    <li><a href="#" wicket:id="actionLink"><span wicket:id="name">[name]</span></a></li>
+                </ul>
+            </li>
+        </ul>   
     </wicket:panel>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js" type="text/javascript" charset="utf-8"></script>	
     <script src="http://jquery-ui.googlecode.com/svn/tags/latest/ui/jquery.effects.core.js" type="text/javascript"></script>
