mysql configuration,  errors correction

--- a/src/main/java/com/issuetracker/pages/component/component/ComponentListView.html
+++ b/src/main/java/com/issuetracker/pages/component/component/ComponentListView.html
@@ -20,7 +20,7 @@ and open the template in the editor.
                 <tr wicket:id="componentsList">
                     <td><span wicket:id="name"></span></td>
 
-                    <td><a href="#" wicket:id="remove"><span wicket:id="name"></span></a></td>
+                    <td><a href="#" wicket:id="remove">[delete]</a></td>
                 </tr>
             </table>
        
