custom field - set value

--- a/src/main/java/com/issuetracker/pages/component/customFieldIssueValue/CustomFieldIssueValueListView.html
+++ b/src/main/java/com/issuetracker/pages/component/customFieldIssueValue/CustomFieldIssueValueListView.html
@@ -9,13 +9,13 @@ and open the template in the editor.
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-    <wicket:panel>
+        <wicket:panel>
         <table cellpadding="8">
-            <tr wicket:id="customFields">
-                <td><span wicket:id="name"></span></td>
-                <td><a href="#" wicket:id="delete">[x]</a></td>
+            <tr wicket:id="customFieldIssueValues">
+                <td><span wicket:id="name"/></td>
+                <td><span wicket:id="value"/></td>
             </tr>
         </table>
     </wicket:panel>
-</body>
+    </body>
 </html>
