login, watcher name

--- a/src/main/java/com/issuetracker/pages/component/issue/SetIssueStateForm.html
+++ b/src/main/java/com/issuetracker/pages/component/issue/SetIssueStateForm.html
@@ -15,8 +15,8 @@ and open the template in the editor.
 
             Issue relates to ID:
             <input type="text" wicket:id="issueRelatesToId" size="30"/>
-            <select wicket:id="statusDropDown"></select><br/><br/>
             <select wicket:id="relTypeDropDown"></select><br/>
+            <select wicket:id="statusDropDown"></select><br/>            
             <input type="submit" value="Update Issue"/>
         </form>
 
