--- a/src/main/java/com/issuetracker/pages/layout/HeaderPanel.html
+++ b/src/main/java/com/issuetracker/pages/layout/HeaderPanel.html
@@ -11,7 +11,9 @@ and open the template in the editor.
     <body>
 
     <wicket:panel>
-        <span wicket:id="name">My label</span>
+        <span wicket:id="name">My label</span><br/>
+         <span align="right" wicket:id="userName"/>
+         <a href="#" align="right" wicket:id="signOutLink">Sign out!</a>
 
         <ul id='nav'>
             <li><a href="#">Projects</a>
