--- a/src/main/java/com/issuetracker/pages/component/workflow/WorkflowListView.html
+++ b/src/main/java/com/issuetracker/pages/component/workflow/WorkflowListView.html
@@ -13,11 +13,11 @@ and open the template in the editor.
         <table cellpadding="8">
             <tr>
                 <td width="200">Name</td>
-                <td width="200">&nbsp;</td>
+                <!--<td width="200">&nbsp;</td>-->
             </tr>
             <tr wicket:id="workflowList">
                 <td><a href="#" wicket:id="showWorkflow"><span wicket:id="name"></span></a></td>
-                <td><a href="#" wicket:id="delete">[delete]</a></td>
+                <!--<td><a href="#" wicket:id="delete">[delete]</a></td>-->
             </tr>
         </table>
     </wicket:panel>
