Aligned DAO API and created first draft of service layer

--- a/src/main/java/com/issuetracker/pages/component/workflow/WorkflowListView.html
+++ b/src/main/java/com/issuetracker/pages/component/workflow/WorkflowListView.html
@@ -13,7 +13,7 @@
             </tr>
             <tr wicket:id="workflowList">
                 <td><a href="#" wicket:id="showWorkflow"><span wicket:id="name"></span></a></td>
-                <!--<td><a href="#" wicket:id="delete">[delete]</a></td>-->
+                <!--<td><a href="#" wicket:id="remove">[remove]</a></td>-->
             </tr>
         </table>
     </wicket:panel>
