--- a/src/main/java/com/issuetracker/pages/component/status/StatusListView.html
+++ b/src/main/java/com/issuetracker/pages/component/status/StatusListView.html
@@ -14,7 +14,7 @@
             <tr wicket:id="statusList">
                 <td><span wicket:id="name"></span></td>
                 <td><a href="#" wicket:id="showStatus"><span wicket:id="name"></span></a></td>
-                <!--<td><a href="#" wicket:id="delete">[delete]</a></td>-->
+                <!--<td><a href="#" wicket:id="remove">[remove]</a></td>-->
             </tr>
         </table>
     </wicket:panel>
