--- a/src/main/java/com/issuetracker/pages/layout/HeaderPanel.html
+++ b/src/main/java/com/issuetracker/pages/layout/HeaderPanel.html
@@ -1,44 +1,34 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
-<!DOCTYPE html>
-<html>
-    <head>
-        <title></title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
 
-    <wicket:panel>
-        <span wicket:id="name">My label</span><br/>
-         <span align="right" wicket:id="userName"/>
-         <a href="#" align="right" wicket:id="signOutLink">Sign out!</a>
+<wicket:panel>
+    <hr/>
+    <span wicket:id="name"/><br/>
+    <a href="#" align="right" wicket:id="signInLink">Sign in!</a>
+    <span align="right" wicket:id="userName"/>
+    <a href="#" align="right" wicket:id="signOutLink">Sign out!</a>
 
-        <ul id='nav'>
-            <li><a href="#">Projects</a>
-                <ul  wicket:id="projectTasks" >
-                    <li><a href="#" wicket:id="actionLink"><span wicket:id="name">[name]</span></a></li>
+        <ul id="nav">
+            <li>
+                <span wicket:id="projectsLabel"/>
+                <ul wicket:id="projectTasks" >
+                    <li><a href="#" wicket:id="actionLink"><span wicket:id="name"/></a></li>
                 </ul>
             </li>
         </ul>    
-        <ul id='nav'>
-            <li><a href="#">Issues</a>
-                <ul  wicket:id="issueTasks" >
-                    <li><a href="#" wicket:id="actionLink"><span wicket:id="name">[name]</span></a></li>
+        <ul id="nav">
+            <li>
+                <span wicket:id="issuesLabel"/>
+                <ul wicket:id="issueTasks" >
+                    <li><a href="#" wicket:id="actionLink"><span wicket:id="name"/></a></li>
+                </ul>
+            </li>
+        </ul>
+        <ul id="nav" wicket:id="workflowUl">
+            <li>
+                <span wicket:id="workflowLabel"/>
+                <ul wicket:id="workflowTasks" >
+                    <li><a href="#" wicket:id="actionLink"><span wicket:id="name"/></a></li>
                 </ul>
             </li>
         </ul>   
-        <ul id='nav'>
-            <li><a href="#">Workflow</a>
-                <ul  wicket:id="workflowTasks" >
-                    <li><a href="#" wicket:id="actionLink"><span wicket:id="name">[name]</span></a></li>
-                </ul>
-            </li>
-        </ul>   
-    </wicket:panel>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js" type="text/javascript" charset="utf-8"></script>	
-    <script src="http://jquery-ui.googlecode.com/svn/tags/latest/ui/jquery.effects.core.js" type="text/javascript"></script>
-    <script type="text/javascript" src="scripts.js"></script>
-</body>
-</html>
+    <hr/>
+</wicket:panel>
