--- a/src/main/java/com/issuetracker/pages/component/project/ProjectListView.html
+++ b/src/main/java/com/issuetracker/pages/component/project/ProjectListView.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title></title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
     <wicket:panel>
         <table cellpadding="8">
             <tr>
                 <td width="200">Name</td>
-                <td width="200">&nbsp;</td>
+                <td width="200">Project Leader</td>
             </tr>
             <tr wicket:id="projectList">
-                <td><span wicket:id="name"></span></td>
+                <td>
+                    <a href="#" wicket:id="showProject">
+                        <span wicket:id="name"/>
+                    </a>
+                </td>
+                <td><span wicket:id="projectLead"/></td>
             </tr>
         </table>
     </wicket:panel>
-</body>
-</html>
