--- a/src/main/java/com/issuetracker/pages/component/customField/CustomFieldListView.html
+++ b/src/main/java/com/issuetracker/pages/component/customField/CustomFieldListView.html
@@ -1,20 +1,14 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
 <!DOCTYPE html>
-<html>
-    <head>
-        <title></title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
-    <wicket:panel>
-        <table cellpadding="8">
-            <tr wicket:id="customFields">
-                <td><span wicket:id="name"></span></td>
-            </tr>
-        </table>
-    </wicket:panel>
-</body>
-</html>
+<wicket:panel>
+    <span wicket:id="customFields"/>
+    <table cellpadding="8">
+        <tr>
+            <td width="200">Name</td>
+            <td width="200">&nbsp;</td>
+        </tr>
+        <tr wicket:id="customFieldsList">
+            <td><span wicket:id="name"/></td>
+            <td><a href="#" wicket:id="remove">[delete]</a></td>
+        </tr>
+    </table>
+</wicket:panel>
