--- a/src/main/java/com/issuetracker/pages/layout/HeaderPanel.html
+++ b/src/main/java/com/issuetracker/pages/layout/HeaderPanel.html
@@ -6,12 +6,12 @@
     </head>
     <body>
 
-<wicket:panel>
-    <hr/>
-    <span wicket:id="name"/><br/>
-    <a href="#" align="right" wicket:id="signInLink">Sign in!</a>
-    <span align="right" wicket:id="userName"/>
-    <a href="#" align="right" wicket:id="signOutLink">Sign out!</a>
+    <wicket:panel>
+        <hr/>
+        <span wicket:id="name"/><br/>
+        <a href="#" align="right" wicket:id="signInLink">Sign in!</a>
+        <span align="right" wicket:id="userName"/>
+        <a href="#" align="right" wicket:id="signOutLink">Sign out!</a>
 
         <ul id="nav">
             <li>
@@ -37,9 +37,23 @@
                 </ul>
             </li>
         </ul>
-        <ul id='nav'>
-            <li><a href="#" wicket:id="importerLink">Import issues</a></li>
+        <ul id='nav' wicket:id="importUl">
+            <li>
+                <span wicket:id="importLabel"/>
+                <ul wicket:id="importTasks" >
+                    <li><a href="#" wicket:id="actionLink"><span wicket:id="name"/></a></li>
+                </ul>
+            </li>
         </ul>
+        <ul id='nav' wicket:id="permissionsUl">
+            <li>
+                <span wicket:id="permissionsLabel"/>
+                <ul wicket:id="permissionsTasks" >
+                    <li><a href="#" wicket:id="actionLink"><span wicket:id="name"/></a></li>
+                </ul>
+            </li>
+        </ul>
+        <hr/>
     </wicket:panel>
 </body>
 </html>
