--- a/src/main/java/com/issuetracker/pages/component/comment/CommentListView.html
+++ b/src/main/java/com/issuetracker/pages/component/comment/CommentListView.html
@@ -7,7 +7,8 @@
                     <td>
                         <span wicket:id="author"/> wrote: 
                         <br/>
-                        <span wicket:id="comment"/>
+                        <span wicket:id="comment"/>, id: 
+                        <span wicket:id="commentID"/>
                     </td>
 
                     <td><a href="#" wicket:id="remove">x</a></td>
