--- a/src/main/java/com/issuetracker/pages/component/permission/PermissionListView.html
+++ b/src/main/java/com/issuetracker/pages/component/permission/PermissionListView.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <wicket:panel>
-        <div wicket:id="permissionFeedbnackPanel"/>
+        <div wicket:id="permissionFeedbackPanel"/>
         <form wicket:id="permissionForm">
             <table style="border: 2px dotted #fc0; padding: 5px;">
                 <tr>
