--- a/src/main/java/com/issuetracker/pages/layout/HeaderPanel.html
+++ b/src/main/java/com/issuetracker/pages/layout/HeaderPanel.html
@@ -38,10 +38,10 @@
             </ul>
         </li>
     </ul>
-    <ul id='nav' wicket:id="permissionsUl">
+    <ul id='nav' wicket:id="adminConsoleUl">
         <li>
-            <span wicket:id="permissionsLabel"/>
-            <ul wicket:id="permissionsTasks" >
+            <span wicket:id="adminConsoleLabel"/>
+            <ul wicket:id="profile" >
                 <li><a href="#" wicket:id="actionLink"><span wicket:id="name"/></a></li>
             </ul>
         </li>
